about to remove asterix

--- a/src/pug/pages/contact.pug
+++ b/src/pug/pages/contact.pug
@@ -35,14 +35,13 @@ block content
                         p.lead.mb-5  We will get back to you as soon as possible 
                 .row.align-items-center.mb-10
                     .col-lg-12.text-center
-                        .section-preheading Email Us
                         a(href='mailto:contact@wing.health') contact@wing.health
                     .col-lg-3    
 
         .container
             .row.justify-content-center
                 .col-xl-8.col-lg-10.text-center
-                    p.page-header-text.mb-5 Connect with us to learn more about telehealth in your community
+                    h1.page-header-title Sign up to our newsletter
 
                     <!-- Begin Mailchimp Signup Form -->
                     <div id="mc_embed_signup">
