--- a/src/pug/pages/provider.pug
+++ b/src/pug/pages/provider.pug
@@ -33,8 +33,8 @@ block content
             .container
                 .row.align-items-center
                     .col-lg-7
-                        h1.page-header-title Opportunity is local and virtual for providers
-                        p.page-header-text.md-5 Set up visits, bill Medicare and Medicaid, and connect with individuals in your community
+                        h1.page-header-title Local virtual opportunity for providers
+                        p.page-header-text.md-5 Schedule visits, set your own hours and bill for virtual care. All from your own device
                     .col-lg-5
                         img.img-fluid(src='assets/img/svgs/doctor-woman.svg', height="50px").mb-5
                 .row.align-items-center
@@ -42,31 +42,35 @@ block content
                         .card.h-100
                             .card-body.p-5
                                 .text-center
-                                    .h1 Sign up
-                                    .p Wing Health notifies you of people in your community looking for care
+                                    .h1 Sign up and meet patients
+                                    .p Connect with individuals in your community looking for your expertise
                     .col-lg-4.mb-5.mb-lg-0
                         .card.h-100
                             .card-body.p-5
                                 .text-center
-                                    .h1 We onboard you to to telehealth
-                                    .p Attend one of our information sessions
+                                    .h1 Onboard to to telehealth
+                                    .p Attend one of our information sessions and ask any questions
                     .col-lg-4.mb-5.mb-lg-0
                         .card.h-100
                             .card-body.p-5
                                 .text-center
-                                    .h1 Bill Medicare and Medicaid
-                                    .p FQHCs can now bill these for telehealth services
-
+                                    .h1 Bill Medicare, Medicaid and private insurance
+                                    .p New regulation expands coverage
+        .page-header-content.pt-4
+            .container.pt-4
+                .row.align-items-center.text-center.pt-4
+                    .col-lg-12
+                        h1 Start providing virtual care in your community
                 .row.align-items-center.pt-4  
                     .col-lg-2
                     .col-lg-8
                         <!-- Begin Mailchimp Signup Form --> <link href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css"> <style type="text/css"> #mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; } /* Add your own Mailchimp form style overrides in your site stylesheet or in this style block. We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */ </style> <div id="mc_embed_signup"> <form action="https://health.us19.list-manage.com/subscribe/post?u=60f25dc9e60410744bfbf2f9c&amp;id=170a42c8da" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate> <div id="mc_embed_signup_scroll"> <div class="indicates-required"><span class="asterisk">*</span> indicates required</div> <div class="mc-field-group"> <label for="mce-FNAME">First Name  <span class="asterisk">*</span> </label> <input type="text" value="" name="FNAME" class="required" id="mce-FNAME"> </div> <div class="mc-field-group"> <label for="mce-LNAME">Last Name  <span class="asterisk">*</span> </label> <input type="text" value="" name="LNAME" class="required" id="mce-LNAME"> </div> <div class="mc-field-group"> <label for="mce-MMERGE3">Specialty  <span class="asterisk">*</span> </label> <input type="text" value="" name="MMERGE3" class="required" id="mce-MMERGE3"> </div> <div class="mc-field-group"> <label for="mce-EMAIL">Email Address  <span class="asterisk">*</span> </label> <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL"> </div> <div class="mc-field-group size1of2"> <label for="mce-MMERGE6">Phone Number  <span class="asterisk">*</span> </label> <input type="text" name="MMERGE6" class="required" value="" id="mce-MMERGE6"> </div> <div id="mce-responses" class="clear"> <div class="response" id="mce-error-response" style="display:none"></div> <div class="response" id="mce-success-response" style="display:none"></div> </div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups--> <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_60f25dc9e60410744bfbf2f9c_170a42c8da" tabindex="-1" value=""></div> <div class="clear"><input type="submit" value="Sign up" name="subscribe" id="mc-embedded-subscribe" class="button"></div> </div> </form> </div> <script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';fnames[3]='MMERGE3';ftypes[3]='text';fnames[0]='EMAIL';ftypes[0]='email';fnames[6]='MMERGE6';ftypes[6]='phone';}(jQuery));var $mcj = jQuery.noConflict(true);</script> <!--End mc_embed_signup-->
 
-        .container.align-items-center  
-            <!-- Calendly inline widget begin -->
-            <div class="calendly-inline-widget" data-url="https://calendly.com/wing-health/we-d-like-to-connect-clone" style="min-width:220px;height:750px;"></div>
-            <script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js"></script>
-            <!-- Calendly inline widget end -->
+        //- .container.align-items-center  
+        //-     <!-- Calendly inline widget begin -->
+        //-     <div class="calendly-inline-widget" data-url="https://calendly.com/wing-health/we-d-like-to-connect-clone" style="min-width:220px;height:750px;"></div>
+        //-     <script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js"></script>
+        //-     <!-- Calendly inline widget end -->
 
             //- .container
             //-     .row.justify-content-center.pt-2
