--- a/src/pug/pages/individual.pug
+++ b/src/pug/pages/individual.pug
@@ -31,7 +31,7 @@ block content
             .container
                 .row.align-items-center
                     .col-lg-7
-                        h1.page-header-title Local care for individuals
+                        h1.page-header-title Local virtual care for individuals
                         p.page-header-text.mb-5 Wing Health is telehealth delivered one-on-one, privately and confidentially, with a nearby professional via messaging, phone or video chat
                     .col-lg-5
                         img.img-fluid(src='assets/img/svgs/mask-man.svg')        
@@ -40,59 +40,40 @@ block content
                         .card.h-100
                             .card-body.p-5
                                 .text-center
-                                    .h1 Sign up
-                                    .p.text-dark Tell us more about yourself 
-                    .col-lg-4.mb-5.mb-lg-0
-                        .card.h-100
-                            .card-body.p-5
-                                .text-center
-                                    .h1 Enter availability
-                                    .p.text-dark We will reach out and connect you with a local provider
+                                    .h1 Meet local health care professionals 
+                                    .p.text-dark Wing Health connects individuals to local community providers offering virtual services
 
                     .col-lg-4.mb-5.mb-lg-0
                         .card.h-100
                             .card-body.p-5
                                 .text-center
-                                    .h1 Pay with Medicare and Medicaid
-                                    .p.text-dark Care at home is now covered
+                                    .h1 Set up with us
+                                    .p.text-dark Our telehealth experts help you set up all the tools you need to recieve virtual care and are available for any questions
 
-                .row.pt-4  
+                    .col-lg-4.mb-5.mb-lg-0
+                        .card.h-100
+                            .card-body.p-5
+                                .text-center
+                                    .h1 Pay with Medicare, Medicaid and private insurance
+                                    .p.text-dark New regulation expands coverage
+                                    
+        .page-header-content.pt-4
+            .container.pt-4
+                .row.align-items-center.text-center.pt-4
+                    .col-lg-12
+                        h1 Start connecting with local health care professionals 
+                .row.align-items-center
                     .col-lg-2
                     .col-lg-8
                         <!-- Begin Mailchimp Signup Form --> <link href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css"> <style type="text/css"> #mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; } /* Add your own Mailchimp form style overrides in your site stylesheet or in this style block. We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */ </style> <div id="mc_embed_signup"> <form action="https://health.us19.list-manage.com/subscribe/post?u=60f25dc9e60410744bfbf2f9c&amp;id=170a42c8da" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate> <div id="mc_embed_signup_scroll"> <div class="indicates-required"><span class="asterisk">*</span> indicates required</div> <div class="mc-field-group"> <label for="mce-FNAME">First Name  <span class="asterisk">*</span> </label> <input type="text" value="" name="FNAME" class="required" id="mce-FNAME"> </div> <div class="mc-field-group"> <label for="mce-LNAME">Last Name  <span class="asterisk">*</span> </label> <input type="text" value="" name="LNAME" class="required" id="mce-LNAME"> </div> <div class="mc-field-group"> <label for="mce-MMERGE5">What type of care are you seeking?  <span class="asterisk">*</span> </label> <input type="text" value="" name="MMERGE5" class="required" id="mce-MMERGE5"> </div> <div class="mc-field-group"> <label for="mce-EMAIL">Email Address  <span class="asterisk">*</span> </label> <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL"> </div> <div class="mc-field-group size1of2"> <label for="mce-MMERGE6">Phone Number  <span class="asterisk">*</span> </label> <input type="text" name="MMERGE6" class="required" value="" id="mce-MMERGE6"> </div> <div id="mce-responses" class="clear"> <div class="response" id="mce-error-response" style="display:none"></div> <div class="response" id="mce-success-response" style="display:none"></div> </div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups--> <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_60f25dc9e60410744bfbf2f9c_170a42c8da" tabindex="-1" value=""></div> <div class="clear"><input type="submit" value="Sign up" name="subscribe" id="mc-embedded-subscribe" class="button"></div> </div> </form> </div> <script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';fnames[5]='MMERGE5';ftypes[5]='text';fnames[0]='EMAIL';ftypes[0]='email';fnames[6]='MMERGE6';ftypes[6]='phone';}(jQuery));var $mcj = jQuery.noConflict(true);</script> <!--End mc_embed_signup-->
 
-        .container.align-items-center  
-            <!-- Calendly inline widget begin -->
-            <div class="calendly-inline-widget" data-url="https://calendly.com/wing-health/individual-appointment" style="min-width:320px;height:1000px;"></div>
-            <script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js"></script>
-            <!-- Calendly inline widget end -->
+        
 
-            //- .container
-            //-     .row.justify-content-center.pt-2
-            //-         .col-xl-8.col-lg-10.text-center
-            //-             p.page-header-text.mb-5 
-
-            //-             <!-- Begin Mailchimp Signup Form -->
-            //-             <div id="mc_embed_signup">
-            //-             <form class="page-header-signup mb-2 mb-md-0" action="https://health.us19.list-manage.com/subscribe/post?u=60f25dc9e60410744bfbf2f9c&amp;id=170a42c8da" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" target="_blank" novalidate>
-            //-                 <div class="form-row justify-content-center">
-            //-                     <div class="col-lg-6 col-md-8">
-            //-                         <div class="form-group mr-0 mr-lg-2">
-            //-                             <div class="form-group mr-0 mr-lg-2">
-            //-                                 <label class="sr-only" for="inputEmail">Enter your email...</label>
-            //-                                 <input class="form-control form-control-solid rounded-pill" id="mce-EMAIL" type="email" name="EMAIL" placeholder="Enter your email..." />
-            //-                             </div>
-            //-                         </div>
-            //-                     </div>
-            //-                     <div class="col-lg-3 col-md-4">
-            //-                         <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-            //-                         <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_60f25dc9e60410744bfbf2f9c_170a42c8da" tabindex="-1" value=""></div>
-            //-                         <div class="clear"><input type="submit" value="Sign up" name="subscribe" id="mc-embedded-subscribe" class="btn btn-teal btn-block btn-marketing rounded-pill"></div>
-            //-                     </div>
-            //-                 </div>
-            //-             </form>
-            //-             </div>
-            //-             <!--End mc_embed_signup-->
+                        //- .container.align-items-center  
+        //-     <!-- Calendly inline widget begin -->
+        //-     <div class="calendly-inline-widget" data-url="https://calendly.com/wing-health/individual-appointment" style="min-width:320px;height:1000px;"></div>
+        //-     <script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js"></script>
+        //-     <!-- Calendly inline widget end -->
 
 block footer
 
