--- a/src/pug/pages/contact.pug
+++ b/src/pug/pages/contact.pug
@@ -32,19 +32,15 @@ block content
                 .row.justify-content-center
                     .col-lg-8.text-center
                         h1.page-header-title Get in touch with Wing Health
-                        p.lead.mb-5  We will get back to you as soon as possible 
-                .row.align-items-center.mb-10
-                    .col-lg-12.text-center
-                        a(href='mailto:contact@wing.health') contact@wing.health
-                    .col-lg-3    
+                        a(href='mailto:contact@wing.health').pt-4 contact@wing.health
 
-        .container
-            .row.justify-content-center
-                .col-xl-8.col-lg-10.text-center
+        .container.pt-4
+            .row.justify-content-center.pt-4
+                .col-xl-8.col-lg-10.text-center.pt-4
                     h1.page-header-title Sign up to our newsletter
 
                     <!-- Begin Mailchimp Signup Form -->
-                    <div id="mc_embed_signup">
+                    <div id="mc_embed_signup" class="pt-4">
                     <form class="page-header-signup mb-2 mb-md-0" action="https://health.us19.list-manage.com/subscribe/post?u=60f25dc9e60410744bfbf2f9c&amp;id=170a42c8da" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" target="_blank" novalidate>
                         <div class="form-row justify-content-center">
                             <div class="col-lg-6 col-md-8">
