--- a/src/pug/pages/provider.pug
+++ b/src/pug/pages/provider.pug
@@ -33,7 +33,7 @@ block content
             .container
                 .row.align-items-center
                     .col-lg-7
-                        h1.page-header-title Local virtual opportunity for providers
+                        h1.page-header-title Local opportunity for providers
                         p.page-header-text.md-5 Schedule visits, set your own hours and bill for virtual care. All from your own device
                     .col-lg-5
                         img.img-fluid(src='assets/img/svgs/doctor-woman.svg', height="50px").mb-5
