--- a/src/pug/pages/provider.pug
+++ b/src/pug/pages/provider.pug
@@ -48,7 +48,7 @@ block content
                         .card.h-100
                             .card-body.p-5
                                 .text-center
-                                    .h1 Onboard to to telehealth
+                                    .h1 Onboard to telehealth
                                     .p Attend one of our information sessions and ask any questions
                     .col-lg-4.mb-5.mb-lg-0
                         .card.h-100
