added clinics to page

--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -35,8 +35,8 @@ block content
                 .row.align-items-center
                     .col-lg-7
                         h1.page-header-title Hyperlocal telehealth
-                        p.page-header-text.mb-5 Wing Health enables individuals to connect with telehealth care professionals in their neighborhoods, towns and cities
-
+                        p.page-header-text.mb-5 Wing Health connects individuals to health care professionals in their neighborhoods, towns and cities
+                        a.btn.btn-teal.btn-marketing.rounded-pill(href='find-a-clinic.html') Find a clinic
                     .col-lg-5
                         img.img-fluid(src='assets/img/svgs/drawkit-list-app-colour.svg')
 
