--- a/src/pug/pages/mixins/navbar.pug
+++ b/src/pug/pages/mixins/navbar.pug
@@ -9,6 +9,9 @@ mixin navbar(options)
             #navbarSupportedContent.collapse.navbar-collapse
                 ul.navbar-nav.ml-auto.mr-lg-
                     li.nav-item
+                        a.nav-link(href='find-a-clinic.html')
+                            | Find a clinic
+                    li.nav-item
                         a.nav-link(href='individual.html')
                             | For individuals
                     li.nav-item
