--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -35,7 +35,7 @@ block content
                 .row.align-items-center
                     .col-lg-7
                         h1.page-header-title Hyperlocal telehealth
-                        p.page-header-text.mb-5 Wing Health connects individuals to health care professionals in their neighborhoods, towns and cities
+                        p.page-header-text.mb-5 Wing Health connects individuals to nearby health care professionals
                         a.btn.btn-teal.btn-marketing.rounded-pill(href='find-a-clinic.html') Find a clinic
                     .col-lg-5
                         img.img-fluid(src='assets/img/svgs/drawkit-list-app-colour.svg')
@@ -82,27 +82,27 @@ block content
                     h1.page-header-title For providers, opportunity is local and virtual 
                     p.page-header-text.mb-5 Wing Health makes it easy for providers to connect with new and existing individuals in their communities
                         
-            .row.pt-4
-                .col-lg-4.mb-5.mb-lg-0
-                    .card.h-100
-                        .card-body.p-5
-                            .text-center
-                                   .h1 Easy visits
-                                   .p Wing Health schedules visits and facilitates billing
+            //- .row.pt-4
+            //-     .col-lg-4.mb-5.mb-lg-0
+            //-         .card.h-100
+            //-             .card-body.p-5
+            //-                 .text-center
+            //-                        .h1 Easy visits
+            //-                        .p Wing Health schedules visits and facilitates billing
                 
-                .col-lg-4.mb-5.mb-lg-0
-                    .card.h-100
-                        .card-body.p-5
-                            .text-center
-                                   .h1 Bill Medicare, Medicaid and private insurers
-                                   .p New rules have expanded what can be reimbursed 
+            //-     .col-lg-4.mb-5.mb-lg-0
+            //-         .card.h-100
+            //-             .card-body.p-5
+            //-                 .text-center
+            //-                        .h1 Bill Medicare, Medicaid and private insurers
+            //-                        .p New rules have expanded what can be reimbursed 
 
-                .col-lg-4.mb-5.mb-lg-0
-                    .card.h-100
-                        .card-body.p-5
-                            .text-center
-                                   .h1 Community first
-                                   .p We are comitted to providing a high quality experience for FQHCs and the communities they serve
+            //-     .col-lg-4.mb-5.mb-lg-0
+            //-         .card.h-100
+            //-             .card-body.p-5
+            //-                 .text-center
+            //-                        .h1 Community first
+            //-                        .p We are comitted to providing a high quality experience for FQHCs and the communities they serve
 
             .mt-5.text-center
                 a.btn.btn-teal.btn-marketing.rounded-pill(href='provider.html') For providers
