--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -34,8 +34,8 @@ block content
             .container
                 .row.align-items-center
                     .col-lg-7
-                        h1.page-header-title Hyperlocal telehealth
-                        p.page-header-text.mb-5 Wing Health enables individuals to connect with telehealth care professionals in their neighborhoods, towns and cities
+                        h1.page-header-title Hyperlocal telehealth assistant
+                        p.page-header-text.mb-5 Wing Health guides individuals to connect with telehealth care professionals in their neighborhoods, towns and cities
 
                     .col-lg-5
                         img.img-fluid(src='assets/img/svgs/drawkit-list-app-colour.svg')
