new clinic logos not yet added but fixes and remove street outreach services

--- a/src/pug/pages/find-a-clinic.pug
+++ b/src/pug/pages/find-a-clinic.pug
@@ -39,22 +39,22 @@ block content
                             .card-body.p-5
                                     .h1 BAART Community HealthCare
                                     .p.text-dark (415) 863-3883
-                                    a(href='https://www.baarthealthcare.org/').pt-4 baarthealthcare.org
+                                    a(href='https://www.baarthealthcare.org/', target ="_blank").pt-4 baarthealthcare.org
 
                     .col-lg-4.mb-5.mb-lg-0
                         .card.h-100
                             .card-body.p-5
                                     .h1 Curry Senior Center
-                                    .p.text-dark 415-920-1351
-                                    a(href='https://wwww.curryseniorcenter.org/').pt-4 curryseniorcenter.org
+                                    .p.text-dark (415) 920-1351
+                                    a(href='https://curryseniorcenter.org/', target ="_blank").pt-4 curryseniorcenter.org
 
                     .col-lg-4.mb-5.mb-lg-0
                         .card.h-100
                             .card-body.p-5
                                 .text-center
                                     .h1 HealthRIGHT 360
-                                    .p.text-dark 415-487-5638
-                                    a(href='http://www.healthright360.org').pt-4 healthright360.org
+                                    .p.text-dark (415) 487-5638
+                                    a(href='http://www.healthright360.org', target ="_blank").pt-4 healthright360.org
 
                 .row.pt-4.text-center.pt-4
                     .col-lg-4.mb-5.mb-lg-0
@@ -62,7 +62,7 @@ block content
                             .card-body.p-5
                                     .h1 Mission Neighborhood Health Center
                                     .p.text-dark (415) 552-1013
-                                    a(href='http://www.mnhc.org/').pt-4 mnhc.org
+                                    a(href='http://www.mnhc.org/', target ="_blank").pt-4 mnhc.org
 
                     .col-lg-4.mb-5.mb-lg-0
                         .card.h-100
@@ -70,14 +70,14 @@ block content
                                 .text-center
                                     .h1 Native American Health Center
                                     .p.text-dark (415) 621-8051
-                                    a(href='http://www.nativehealth.org/').pt-4 nativehealth.org
+                                    a(href='http://www.nativehealth.org/', target ="_blank").pt-4 nativehealth.org
 
                     .col-lg-4.mb-5.mb-lg-0
                         .card.h-100
                             .card-body.p-5
                                     .h1 North East Medical Services
-                                    .p.text-dark 415-391-9686
-                                    a(href='http://www.nems.org/').pt-4 nems.org
+                                    .p.text-dark (415) 391-9686
+                                    a(href='http://www.nems.org/', target ="_blank").pt-4 nems.org
 
                 .row.pt-4.text-center.pt-4
                     .col-lg-4.mb-5.mb-lg-0
@@ -85,21 +85,21 @@ block content
                             .card-body.p-5
                                     .h1 Planned Parenthood Northern California
                                     .p.text-dark (415) 821-1282
-                                    a(href='https://www.plannedparenthood.org/planned-parenthood-northern-california').pt-4 plannedparenthood.org
+                                    a(href='https://www.plannedparenthood.org/planned-parenthood-northern-california', target ="_blank").pt-4 plannedparenthood.org
 
                     .col-lg-4.mb-5.mb-lg-0
                         .card.h-100
                             .card-body.p-5
                                     .h1 San Francisco Community Health Center
                                     .p.text-dark (415) 292-3400
-                                    a(href='https://www.sfcommunityhealth.org/').pt-4 sfcommunityhealth.org
+                                    a(href='https://www.sfcommunityhealth.org/', target ="_blank").pt-4 sfcommunityhealth.org
 
                     .col-lg-4.mb-5.mb-lg-0
                         .card.h-100
                             .card-body.p-5
                                     .h1 San Francisco Free Clinic
                                     .p.text-dark (415) 750-9894
-                                    a(href='https://sffc.org/').pt-4 sffc.org
+                                    a(href='https://sffc.org/', target ="_blank").pt-4 sffc.org
 
                 .row.pt-4.text-center.pt-4
                     .col-lg-4.mb-5.mb-lg-0
@@ -107,21 +107,21 @@ block content
                             .card-body.p-5
                                     .h1 South of Market Health Center
                                     .p.text-dark (415) 503-6000
-                                    a(href='http://smhcsf.org/').pt-4 smhcsf.org
+                                    a(href='http://smhcsf.org/', target ="_blank").pt-4 smhcsf.org
 
                     .col-lg-4.mb-5.mb-lg-0
                         .card.h-100
                             .card-body.p-5
                                     .h1 St. Anthony Medical Clinic
                                     .p.text-dark (415) 241-8320
-                                    a(href='https://www.stanthonysf.org/').pt-4 stanthonysf.org
+                                    a(href='https://www.stanthonysf.org/', target ="_blank").pt-4 stanthonysf.org
 
-                    .col-lg-4.mb-5.mb-lg-0
-                        .card.h-100
-                            .card-body.p-5
-                                    .h1 Street Outreach Services
-                                    .p.text-dark (415) 355-2250
-                                    a(href='https://www.facebook.com/SOS.VETSOS').pt-4 Facebook page
+                    //- .col-lg-4.mb-5.mb-lg-0
+                    //-     .card.h-100
+                    //-         .card-body.p-5
+                    //-                 .h1 Street Outreach Services
+                    //-                 .p.text-dark (415) 355-2250
+                    //-                 a(href='https://www.facebook.com/SOS.VETSOS', target ="_blank").pt-4 Facebook page
 
         
 
