--- a/src/pug/pages/provider.pug
+++ b/src/pug/pages/provider.pug
@@ -34,7 +34,7 @@ block content
                 .row.align-items-center
                     .col-lg-7
                         h1.page-header-title Local opportunity for providers
-                        p.page-header-text.md-5 Schedule visits, set your own hours and bill for virtual care. All from your own device
+                        p.page-header-text.md-5 Source new and existing patients, schedule visits and bill for virtual care. All from your own device
                     .col-lg-5
                         img.img-fluid(src='assets/img/svgs/doctor-woman.svg', height="50px").mb-5
                 .row.align-items-center
@@ -43,7 +43,7 @@ block content
                             .card-body.p-5
                                 .text-center
                                     .h1 Sign up, meet patients
-                                    .p Connect with individuals in your community looking for your expertise
+                                    .p Connect with individuals in your community seeking your expertise
                     .col-lg-4.mb-5.mb-lg-0
                         .card.h-100
                             .card-body.p-5
