--- a/src/pug/pages/individual.pug
+++ b/src/pug/pages/individual.pug
@@ -32,7 +32,7 @@ block content
                 .row.align-items-center
                     .col-lg-7
                         h1.page-header-title Local care for individuals
-                        p.page-header-text.mb-5 Wing Health is telehealth delivered one-on-one, privately and confidentially, with a nearby professional via messaging, phone or video chat
+                        p.page-header-text.mb-5 Wing Health connects you to telehealth delivered one-on-one, privately and confidentially, with a nearby professional via messaging, phone or video chat
                     .col-lg-5
                         img.img-fluid(src='assets/img/svgs/mask-man.svg')        
                 .row.pt-4
