--- a/src/pug/pages/find-a-clinic.pug
+++ b/src/pug/pages/find-a-clinic.pug
@@ -81,8 +81,8 @@ block content
                         .card.h-100
                             .card-body.p-5
                                     img.img-fluid(src='assets/img/cliniclogos/nems.png', height="100px")        
-                                    .h1 North East Medical Services
-                                    .p.text-dark (415) 391-9686
+                                    .h1.pt-4 North East Medical Services
+                                    .p.text-dark.pt-4 (415) 391-9686
                                     a(href='http://www.nems.org/', target ="_blank").pt-4 nems.org
 
                 .row.pt-4.text-center.pt-4
