--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -34,8 +34,8 @@ block content
             .container
                 .row.align-items-center
                     .col-lg-7
-                        h1.page-header-title The hyperlocal telehealth assistant
-                        p.page-header-text.mb-5 Wing Health guides individuals to nearby health care professionals for virtual care 
+                        h1.page-header-title Virtual care with a nearby health professional
+                        p.page-header-text.mb-5 Wing Health enables hyperlocal telehealth access in neighborhoods, towns and cities
                         a.btn.btn-teal.btn-marketing.rounded-pill(href='find-a-clinic.html') Find a clinic
                     .col-lg-5
                         img.img-fluid(src='assets/img/svgs/drawkit-list-app-colour.svg')
@@ -58,7 +58,7 @@ block content
                     img.img-fluid(src='assets/img/svgs/holding-phone-colour.svg').mb-5
                 .col-lg-7
                     h1.page-header-title For individuals, discover high quality, local virtual care
-                    p.page-header-text Connect with health care professionals in your area. Schedule a virtual appointment and talk over messaging, phone and video calls. Pay with Medicare, Medicaid or private insurance
+                    p.page-header-text Use wing health to connect with health care professionals in your area. Schedule a virtual appointment and talk over messaging, phone and video calls. Pay with Medicare, Medicaid or private insurance
 
             .mt-5.text-center
                 a.btn.btn-teal.btn-marketing.rounded-pill(href='individual.html') For individuals
