--- a/src/pug/pages/mixins/footer.pug
+++ b/src/pug/pages/mixins/footer.pug
@@ -10,7 +10,7 @@ mixin footer(options)
                     .col-lg-3
                         .footer-brand
                             | Wing Health
-                        .mb-3 Hyperlocal telehealth assistant
+                        .mb-3 Hyperlocal telehealth access
                         .mb-3 
                             a(href=href='contact.html') Contact us
                         //- .icon-list-social.mb-5
