clinic detail mvp basically done

--- a/src/pug/pages/contact.pug
+++ b/src/pug/pages/contact.pug
@@ -32,7 +32,11 @@ block content
                 .row.justify-content-center
                     .col-lg-8.text-center
                         h1.page-header-title Get in touch with Wing Health
+                        p 
+                        a(href='tel:(415) 413-7136‬').pt-4 (415) 413-7136‬
+                        p 
                         a(href='mailto:contact@wing.health').pt-4 contact@wing.health
+                        
 
         .container.pt-4
             .row.justify-content-center.pt-4
