--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -36,7 +36,7 @@ block content
                     .col-lg-7
                         h1.page-header-title Virtual care with a nearby health professional
                         p.page-header-text.mb-5 Wing Health enables hyperlocal telehealth access in neighborhoods, towns and cities
-                        a.btn.btn-teal.btn-marketing.rounded-pill(href='find-a-clinic.html') Find a clinic
+                        a.btn.btn-teal.btn-marketing.rounded-pill(href='find-a-clinic.html') Book a visit
                     .col-lg-5
                         img.img-fluid(src='assets/img/svgs/drawkit-list-app-colour.svg')
 
