--- a/src/pug/pages/mixins/navbar.pug
+++ b/src/pug/pages/mixins/navbar.pug
@@ -9,14 +9,14 @@ mixin navbar(options)
             #navbarSupportedContent.collapse.navbar-collapse
                 ul.navbar-nav.ml-auto.mr-lg-
                     li.nav-item
-                        a.nav-link(href='find-a-clinic.html')
-                            | Find a clinic
-                    li.nav-item
                         a.nav-link(href='individual.html')
                             | For individuals
                     li.nav-item
                         a.nav-link(href='provider.html')
                             | For providers
+                    li.nav-item
+                        a.nav-link(href='contact.html')
+                            | Contact us
                     
-                a(href="contact.html").btn.btn-teal.rounded-pill.px-4.ml-lg-4
-                    | Contact us
+                a(href="find-a-clinic.html").btn.btn-teal.rounded-pill.px-4.ml-lg-4
+                    | Book a visit
