manually adding centers

--- a/src/pug/pages/curry.pug
+++ b/src/pug/pages/curry.pug
@@ -33,10 +33,10 @@ block content
             .container
                 .row.align-items-center
                     .col-lg-7
-                        h1.page-header-title BAART Community Healthcare
-                        p.page-header-text.md-5 Primary care, preventive health services, and focused case management for individuals
+                        h1.page-header-title Curry Senior Center
+                        p.page-header-text.md-5 Curry Senior Center is solely dedicated to helping low income and homeless seniors through a holistic care approach
                     .col-lg-5
-                        img.img-fluid(src='assets/img/cliniclogos/baart.png', height="50px").mb-5
+                        img.img-fluid(src='assets/img/cliniclogos/curry.jpg', height="50px").mb-5
       
                 //- .row.align-items-center
                 //-     .col-lg-12.text-center
