--- a/src/pug/pages/find-a-clinic.pug
+++ b/src/pug/pages/find-a-clinic.pug
@@ -51,7 +51,7 @@ block content
                                     //- .p.text-dark.pt-4 (415) 920-1351
                                     //- a(href='https://curryseniorcenter.org/', target ="_blank").pt-4 curryseniorcenter.org
                                     .p.text-dark.pt-4 
-                                    a.btn.btn-teal.btn-marketing.rounded-pill(href='find-a-clinic.html') Book now
+                                    a.btn.btn-teal.btn-marketing.rounded-pill(href='curry.html') Book now
 
                     .col-lg-4.mb-5.mb-lg-0
                         .card.h-100
@@ -62,7 +62,7 @@ block content
                                     //- .p.text-dark.pt-4 (415) 487-5638
                                     //- a(href='http://www.healthright360.org', target ="_blank").pt-4 healthright360.org
                                     .p.text-dark.pt-4 
-                                    a.btn.btn-teal.btn-marketing.rounded-pill(href='find-a-clinic.html') Book now
+                                    a.btn.btn-teal.btn-marketing.rounded-pill(href='healthright360.html') Book now
 
                 .row.pt-4.text-center.pt-4
                     .col-lg-4.mb-5.mb-lg-0
@@ -71,9 +71,9 @@ block content
                                     img.img-fluid(src='assets/img/cliniclogos/mnhc.png', height="100px")        
                                     .h1.pt-4 Mission Neighborhood Health Center
                                     //- .p.text-dark.pt-4 (415) 552-1013
-                                    a(href='http://www.mnhc.org/', target ="_blank").pt-4 mnhc.org
+                                    //- a(href='http://www.mnhc.org/', target ="_blank").pt-4 mnhc.org
                                     .p.text-dark.pt-4 
-                                    a.btn.btn-teal.btn-marketing.rounded-pill(href='find-a-clinic.html') Book now
+                                    a.btn.btn-teal.btn-marketing.rounded-pill(href='mnhc.html') Book now
 
                     .col-lg-4.mb-5.mb-lg-0
                         .card.h-100
