--- a/src/pug/pages/healthright360.pug
+++ b/src/pug/pages/healthright360.pug
@@ -33,10 +33,10 @@ block content
             .container
                 .row.align-items-center
                     .col-lg-7
-                        h1.page-header-title BAART Community Healthcare
-                        p.page-header-text.md-5 Primary care, preventive health services, and focused case management for individuals
+                        h1.page-header-title HealthRIGHT 360
+                        p.page-header-text.md-5 Primary care, mental health services, substance use disorder treatment, social support and reentry
                     .col-lg-5
-                        img.img-fluid(src='assets/img/cliniclogos/baart.png', height="50px").mb-5
+                        img.img-fluid(src='assets/img/cliniclogos/360.png', height="50px").mb-5
       
                 //- .row.align-items-center
                 //-     .col-lg-12.text-center
