--- a/src/pug/pages/mixins/navbar.pug
+++ b/src/pug/pages/mixins/navbar.pug
@@ -15,8 +15,10 @@ mixin navbar(options)
                         a.nav-link(href='provider.html')
                             | For providers
                     li.nav-item
+                        a.nav-link(href='about.html')
+                            | About us
+                    li.nav-item
                         a.nav-link(href='contact.html')
-                            | Contact us
-                    
+                            | Contact
                 a(href="find-a-clinic.html").btn.btn-teal.rounded-pill.px-4.ml-lg-4
                     | Book a visit
