--- a/src/pug/pages/mnhc.pug
+++ b/src/pug/pages/mnhc.pug
@@ -33,10 +33,12 @@ block content
             .container
                 .row.align-items-center
                     .col-lg-7
-                        h1.page-header-title BAART Community Healthcare
-                        p.page-header-text.md-5 Primary care, preventive health services, and focused case management for individuals
+                        h1.page-header-title Mission Neighborhood Health Center
+                        p.page-header-text.md-5 Mission Neighborhood Health Center honors its Latino roots with a tradition of providing compassionate, patient-centered care. MNHC advocates for health equity and delivers innovative, high quality services responsive to the neighborhoods and diverse communities it serves
+
+
                     .col-lg-5
-                        img.img-fluid(src='assets/img/cliniclogos/baart.png', height="50px").mb-5
+                        img.img-fluid(src='assets/img/cliniclogos/mnhc.png', height="50px").mb-5
       
                 //- .row.align-items-center
                 //-     .col-lg-12.text-center
