--- a/src/pug/pages/find-a-clinic.pug
+++ b/src/pug/pages/find-a-clinic.pug
@@ -40,7 +40,7 @@ block content
                                     img.img-fluid(src='assets/img/cliniclogos/baart.png', height="100px")        
                                     .h1 BAART Community HealthCare                                    
                                     //- .p.text-dark.pt-4 (415) 863-3883
-                                    //- a(href='https://www.baarthealthcare.org/', target ="_blank").pt-4 baarthealthcare.org
+                                    a(href='https://www.baarthealthcare.org/', target ="_blank").pt-4 baarthealthcare.org
                                     .p.text-dark.pt-4 
                                     a.btn.btn-teal.btn-marketing.rounded-pill(href='baart.html') Book now
                     .col-lg-4.mb-5.mb-lg-0
@@ -49,7 +49,7 @@ block content
                                     img.img-fluid(src='assets/img/cliniclogos/curry.jpg',  height="100px")        
                                     .h1.pt-4 Curry Senior Center
                                     //- .p.text-dark.pt-4 (415) 920-1351
-                                    //- a(href='https://curryseniorcenter.org/', target ="_blank").pt-4 curryseniorcenter.org
+                                    a(href='https://curryseniorcenter.org/', target ="_blank").pt-4 curryseniorcenter.org
                                     .p.text-dark.pt-4 
                                     a.btn.btn-teal.btn-marketing.rounded-pill(href='curry.html') Book now
 
@@ -60,7 +60,7 @@ block content
                                     img.img-fluid(src='assets/img/cliniclogos/360.png', height="100px")        
                                     .h1.pt-4 HealthRIGHT 360
                                     //- .p.text-dark.pt-4 (415) 487-5638
-                                    //- a(href='http://www.healthright360.org', target ="_blank").pt-4 healthright360.org
+                                    a(href='http://www.healthright360.org', target ="_blank").pt-4 healthright360.org
                                     .p.text-dark.pt-4 
                                     a.btn.btn-teal.btn-marketing.rounded-pill(href='healthright360.html') Book now
 
@@ -71,7 +71,7 @@ block content
                                     img.img-fluid(src='assets/img/cliniclogos/mnhc.png', height="100px")        
                                     .h1.pt-4 Mission Neighborhood Health Center
                                     //- .p.text-dark.pt-4 (415) 552-1013
-                                    //- a(href='http://www.mnhc.org/', target ="_blank").pt-4 mnhc.org
+                                    a(href='http://www.mnhc.org/', target ="_blank").pt-4 mnhc.org
                                     .p.text-dark.pt-4 
                                     a.btn.btn-teal.btn-marketing.rounded-pill(href='mnhc.html') Book now
 
@@ -84,7 +84,7 @@ block content
                                     //- .p.text-dark.pt-4 (415) 621-8051
                                     a(href='http://www.nativehealth.org/', target ="_blank").pt-4 nativehealth.org
                                     .p.text-dark.pt-4 
-                                    a.btn.btn-teal.btn-marketing.rounded-pill(href='find-a-clinic.html') Book now
+                                    a.btn.btn-teal.btn-marketing.rounded-pill(href='nativehealth.html') Book now
 
                     .col-lg-4.mb-5.mb-lg-0
                         .card.h-100
@@ -94,7 +94,7 @@ block content
                                     //- .p.text-dark.pt-4 (415) 391-9686
                                     a(href='http://www.nems.org/', target ="_blank").pt-4 nems.org
                                     .p.text-dark.pt-4 
-                                    a.btn.btn-teal.btn-marketing.rounded-pill(href='find-a-clinic.html') Book now
+                                    a.btn.btn-teal.btn-marketing.rounded-pill(href='nems.html') Book now
 
                 .row.pt-4.text-center.pt-4
                     .col-lg-4.mb-5.mb-lg-0
@@ -105,7 +105,7 @@ block content
                                     //- .p.text-dark.pt-4 (415) 821-1282
                                     a(href='https://www.plannedparenthood.org/planned-parenthood-northern-california', target ="_blank").pt-4 plannedparenthood.org
                                     .p.text-dark.pt-4 
-                                    a.btn.btn-teal.btn-marketing.rounded-pill(href='find-a-clinic.html') Book now
+                                    a.btn.btn-teal.btn-marketing.rounded-pill(href='pp.html') Book now
 
                     .col-lg-4.mb-5.mb-lg-0
                         .card.h-100
@@ -115,7 +115,7 @@ block content
                                     //- .p.text-dark.pt-4 (415) 292-3400
                                     a(href='https://www.sfcommunityhealth.org/', target ="_blank").pt-4 sfcommunityhealth.org
                                     .p.text-dark.pt-4 
-                                    a.btn.btn-teal.btn-marketing.rounded-pill(href='find-a-clinic.html') Book now
+                                    a.btn.btn-teal.btn-marketing.rounded-pill(href='sfchc.html') Book now
 
                     .col-lg-4.mb-5.mb-lg-0
                         .card.h-100
@@ -125,7 +125,7 @@ block content
                                     //- .p.text-dark.pt-4 (415) 750-9894
                                     a(href='https://sffc.org/', target ="_blank").pt-4 sffc.org
                                     .p.text-dark.pt-4 
-                                    a.btn.btn-teal.btn-marketing.rounded-pill(href='find-a-clinic.html') Book now
+                                    a.btn.btn-teal.btn-marketing.rounded-pill(href='sffc.html') Book now
 
                 .row.pt-4.text-center.pt-4
                     .col-lg-4.mb-5.mb-lg-0
@@ -136,7 +136,7 @@ block content
                                     //- .p.text-dark.pt-4 (415) 503-6000
                                     a(href='http://smhcsf.org/', target ="_blank").pt-4 smhcsf.org
                                     .p.text-dark.pt-4 
-                                    a.btn.btn-teal.btn-marketing.rounded-pill(href='find-a-clinic.html') Book now
+                                    a.btn.btn-teal.btn-marketing.rounded-pill(href='soma.html') Book now
 
                     .col-lg-4.mb-5.mb-lg-0
                         .card.h-100
@@ -146,7 +146,7 @@ block content
                                     //- .p.text-dark.pt-4 (415) 241-8320
                                     a(href='https://www.stanthonysf.org/', target ="_blank").pt-4 stanthonysf.org
                                     .p.text-dark.pt-4 
-                                    a.btn.btn-teal.btn-marketing.rounded-pill(href='find-a-clinic.html') Book now
+                                    a.btn.btn-teal.btn-marketing.rounded-pill(href='stanthony.html') Book now
 
                     //- .col-lg-4.mb-5.mb-lg-0
                     //-     .card.h-100
