about page looking good

--- a/src/pug/pages/contact.pug
+++ b/src/pug/pages/contact.pug
@@ -30,12 +30,9 @@ block content
         .page-header-content
             .container
                 .row.justify-content-center
-                    .col-lg-8.text-center
-                        h1.page-header-title Get in touch with Wing Health
-                        p 
-                        a(href='tel:(415) 413-7136‬').pt-4 (415) 413-7136‬
-                        p 
-                        a(href='mailto:contact@wing.health').pt-4 contact@wing.health
+                    .col-lg-12.text-center
+                        h1.page-header-title Want to get in touch?
+                        h1.pt-4 Reach out to our team at <a href="tel:(415) 413-7136‬">(415) 413-7136</a> or <a href="mailto:contact@wing.health‬">contact@wing.health</a>
                         
 
         .container.pt-4
