--- a/src/pug/pages/about.pug
+++ b/src/pug/pages/about.pug
@@ -32,31 +32,33 @@ block content
         .page-header-content
             .container
                 .row.align-items-center
-                    .col-lg-7
+                    .col-lg-8
                         h1.page-header-title About us
-                        p.page-header-text.md-5 Primary care, preventive health services, and focused case management for individuals
+                        p.page-header-text.md-5.pt-4 Wing Health was founded at the <a href="https://www.youtube.com/watch?v=S_VjyVsAQhY&feature=emb_title"> MIT COVID-19 Challenge - Beat The Pandemic</a>. 1500 participants and 250 mentors from around the world came together to help tackle some of the most pressing issues arising from the COVID-19 pandemic. Our pitch was selected as a top team for the track focusing on new ways to deliver care in a COVID-19 world. 
+                        h1.page-header-title.pt-4 Founders
+                        p.page-header-text.md-5.pt-4 Stephen Grinich. Experience developing impactful telemedicine solutions at scale at 98point6 and Amwell (previously Avizia, Carena). Health care and digital health innovation at UCSF Innovation Ventures. Computer science, mathematics and health economics at Carleton College. 
+                        p.page-header-text.md-5 Jinsy Jacob, MD, MBA. Medical Director of Innovation at Nevada Health Centers. Experience with launching and growing a successful telemedicine program at Nevada Health Centers.
+                        //- p.page-header-text.md-5 Nikhil Yedulla, MD Candidate. Pursuing medical degree at Wayne State University School of Medicine Experience with telehealth research at Henry Ford Health System and medtech commercialization as CMO of Surgicure Technologies. Biological science and Economics at Wayne State University
+                        h1.page-header-title.pt-4 Mission
+                        p.page-header-text.md-5.pt-4 We believe health care is delivered best when it reflects the unique and diverse needs of the communities served, and that individuals recieve the best care from professionals in their neighborhoods, towns and cities. Our mission at Wing Health is to connect patients with local and trusted providers offering telehealth. 
+            
+
+                //- .row.align-items-center
+                //-     .col-lg-8
+                //-         h1.page-header-title.pt-4 Team
+                //-         p.page-header-text.md-5.pt-4 Stephen Grinich, CEO and Founder. Experience developing impactful telemedicine solutions at scale at 98point6 and Amwell (previously Avizia, Carena). Health care and digital health innovation at UCSF Innovation Ventures. Computer science, mathematics and health economics at Carleton College. 
+                //-         p.page-header-text.md-5 Jinsy Jacob, MD, MBA. Medical Director of Innovation at Nevada Health Centers. Experience with launching and growing a successful telemedicine program at Nevada Health Centers.
+                //-         p.page-header-text.md-5 Nikhil Yedulla, MD Candidate. Pursuing medical degree at Wayne State University School of Medicine Experience with telehealth research at Henry Ford Health System and medtech commercialization as CMO of Surgicure Technologies. Biological science and Economics at Wayne State University
+                //-         h1.page-header-title.pt-4 Mission
+                //-         p.page-header-text.md-5.pt-4 We believe health care is best when provided hyperlocally. Individuals who receive the best care from professionals in their neighborhoods, towns and cities will connect with providers that reflect the unique and diverse neeeds of the communities they serve. We stand to enable 
+
 
                 //- .row.align-items-center
                 //-     .col-lg-12.text-center
                 //-         h1 Questions about insurance or payments?
                 //-         h1 Reach out to our Care Coordination team at <a href="tel:(415) 413-7136‬">(415) 413-7136</a> or <a href="mailto:contact@wing.health‬">contact@wing.health</a>
 
-                .row.align-items-center.pt-4
-                    .col-lg-12.mb-5.mb-lg-0
-                        .card.h-100
-                            .card-body.p-5
-                                h1 Questions about insurance or payments?
-                                h1 Reach out to our Care Support team at <a href="tel:(415) 413-7136‬">(415) 413-7136</a> or <a href="mailto:contact@wing.health‬">contact@wing.health</a>
-                                //- .h1 Schedule appointment
-                                //- .p Your virtual visit will take place via a video or phone call. Select a time that works for you below. We look forward to connecting you to BAART Community Care
-
-                .row.align-items-center.pt-4
-                    .col-lg-12.mb-5.mb-lg-0
-                        .card.h-100
-                            .card-body.p-5
-                                h1 Tell us about yourself and we will help you book a virtual visit within 48 hours
-                                <!-- Begin Mailchimp Signup Form --> <link href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css"> <style type="text/css"> #mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; } /* Add your own Mailchimp form style overrides in your site stylesheet or in this style block. We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */ </style> <div id="mc_embed_signup"> <form action="https://health.us19.list-manage.com/subscribe/post?u=60f25dc9e60410744bfbf2f9c&amp;id=170a42c8da" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate> <div id="mc_embed_signup_scroll"> <div class="mc-field-group"> <label for="mce-FNAME">First Name </label> <input type="text" value="" name="FNAME" class="required" id="mce-FNAME"> </div> <div class="mc-field-group"> <label for="mce-LNAME">Last Name </label> <input type="text" value="" name="LNAME" class="required" id="mce-LNAME"> </div> <div class="mc-field-group"> <label for="mce-MMERGE5">What type of care are you seeking? </label> <input type="text" value="" name="MMERGE5" class="required" id="mce-MMERGE5"> </div> <div class="mc-field-group"> <label for="mce-EMAIL">Email Address </label> <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL"> </div> <div class="mc-field-group size1of2"> <label for="mce-MMERGE6">Phone Number </label> <input type="text" name="MMERGE6" class="required" value="" id="mce-MMERGE6"> </div> <div id="mce-responses" class="clear"> <div class="response" id="mce-error-response" style="display:none"></div> <div class="response" id="mce-success-response" style="display:none"></div> </div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups--> <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_60f25dc9e60410744bfbf2f9c_170a42c8da" tabindex="-1" value=""></div> <div class="clear"><input type="submit" value="Submit " name="subscribe" id="mc-embedded-subscribe" class="btn btn-teal btn-marketing rounded-pill"></div> </div> </form> </div> <script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';fnames[5]='MMERGE5';ftypes[5]='text';fnames[0]='EMAIL';ftypes[0]='email';fnames[6]='MMERGE6';ftypes[6]='phone';}(jQuery));var $mcj = jQuery.noConflict(true);</script> <!--End mc_embed_signup-->
-
+            
 
 block footer
 
