--- a/src/pug/pages/provider.pug
+++ b/src/pug/pages/provider.pug
@@ -34,7 +34,7 @@ block content
                 .row.align-items-center
                     .col-lg-7
                         h1.page-header-title Local opportunity for providers
-                        p.page-header-text.md-5 Source new and existing patients, schedule visits and bill for virtual care. All from your own device
+                        p.page-header-text.md-5 Source new and existing patients, schedule visits and bill for virtual care
                     .col-lg-5
                         img.img-fluid(src='assets/img/svgs/doctor-woman.svg', height="50px").mb-5
                 .row.align-items-center
