--- a/src/pug/pages/mixins/navbar.pug
+++ b/src/pug/pages/mixins/navbar.pug
@@ -2,8 +2,11 @@ mixin navbar(options)
 
     nav.navbar.navbar-marketing.navbar-expand-lg(class=options.navbarBg, class=options.navbarStyle, class=options.navbarPosition)
         div(class=options.navbarContainer)
-            a.navbar-brand(href='/', class=options.navbarBrandColor)
+            //- a.navbar-brand(href='/', class=options.navbarBrandColor)
                 | Wing Health
+            <a href="/">
+                <img src="assets/img/logo2.png" alt="HTML tutorial" style="height:42px;border:0;">
+            </a>
             button.navbar-toggler(type='button', data-toggle='collapse', data-target='#navbarSupportedContent', aria-controls='navbarSupportedContent', aria-expanded='false', aria-label='Toggle navigation')
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-menu"><line x1="3" y1="12" x2="21" y2="12"></line><line x1="3" y1="6" x2="21" y2="6"></line><line x1="3" y1="18" x2="21" y2="18"></line></svg>
             #navbarSupportedContent.collapse.navbar-collapse
