--- a/src/pug/pages/mixins/footer.pug
+++ b/src/pug/pages/mixins/footer.pug
@@ -13,15 +13,16 @@ mixin footer(options)
                         .mb-3 Hyperlocal telehealth access
                         .mb-3 
                             a(href=href='contact.html') Contact us
-                        //- .icon-list-social.mb-5
-                        //-     a.icon-list-social-link(href='javascript:void(0);')
-                        //-         i.fab.fa-instagram
-                        //-     a.icon-list-social-link(href='javascript:void(0);')
-                        //-         i.fab.fa-facebook
+                        .icon-list-social.mb-5
+                            a.icon-list-social-link(href='https://www.linkedin.com/company/wing-health')
+                                i.fab.fa-linkedin
+                            //- a.icon-list-social-link(href='javascript:void(0);')
+                            //-     i.fab.fa-instagram
+                            a.icon-list-social-link(href='https://www.facebook.com/winghealthapp')
+                                i.fab.fa-facebook
                         //-     a.icon-list-social-link(href='javascript:void(0);')
                         //-         i.fab.fa-github
-                        //-     a.icon-list-social-link(href='javascript:void(0);')
-                        //-         i.fab.fa-twitter
+                            
 
                     //- .col-lg-12
 
